--- a/src/component/Portfolio/Portfolio.css
+++ b/src/component/Portfolio/Portfolio.css
@@ -123,6 +123,26 @@ button:focus {
   text-decoration: none;
 }
 
+@media only screen and (max-width: 800px) {
+  .portfolio-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .portfolio-wrapper h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p,
+  ul,
+  li {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .portfolio-wrapper {
     flex-direction: column;
@@ -131,6 +151,7 @@ button:focus {
   }
 
   .profile-card {
+    margin-top: 3rem !important;
     width: 100%;
     height: 100%;
     margin: 0 auto;
